# KenshiMultiplayer

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  OFFSETS.md  README.md  RE_REFERENCE.md  build.bat  kenshi1.0.64.CT  kenshi1.0.64.CT.README.md  uninstall.bat
config/: mod_compat.json  settings.json
docs/: DESIGN_roadmap.md  IMPLEMENTATION_COMPLETE.md  NAT_TRAVERSAL_GUIDE.md  NAT_TRAVERSAL_IMPLEMENTATION.md
scripts/: README.md  health_check.py  run_health_check.bat
src/Core/: dllmain.cpp  exception_handler.cpp  exception_handler.h  game_hooks.cpp  game_hooks.h  game_loop.cpp  game_loop.h  game_memory.cpp  game_memory.h  game_types.cpp  game_types.h  local_ip.cpp  local_ip.h  logger.cpp  logger.h  memory.cpp  memory.h  mod_check.cpp  mod_check.h  mp_config.cpp  mp_config.h  nat_traversal.cpp  nat_traversal.h  network.cpp  network.h  protocol.cpp  protocol.h  stun_manager.cpp  stun_manager.h  sync_manager.cpp  sync_manager.h  upnp_manager.cpp  upnp_manager.h  version.h
src/Launcher/: config.cpp  config.h  injector.cpp  injector.h  launcher_ui.cpp  launcher_ui.h  local_ip.cpp  local_ip.h  main.cpp
tests/: protocol_test.cpp
tools/: OFFSET_SCANNER_README.md  offset_scanner.py
